ErpTransfer entity, repository és service logika